--- a/src/app/modules/channels/v2/feed/feed.component.html
+++ b/src/app/modules/channels/v2/feed/feed.component.html
@@ -47,7 +47,10 @@
     <!-- ----------------------------------------- -->
     <!-- LAYOUT : LIST  -->
     <!-- ----------------------------------------- -->
-    <div class="m-channelFeed__list" *ngIf="!isGrid">
+    <div
+      class="m-channelFeed__list"
+      *ngIf="!isGrid && (feed.service.feed | async).length > 0"
+    >
       <m-composer *ngIf="service.isOwner$ | async"></m-composer>
       <div class="m-channelFeedList__entities">
         <m-newsfeed__entity
@@ -58,6 +61,112 @@
         ></m-newsfeed__entity>
       </div>
       <ng-container [ngTemplateOutlet]="infiniteScroll"></ng-container>
+    </div>
+
+    <!-- ----------------------------------------- -->
+    <!-- LAYOUT : NO POSTS  -->
+    <!-- ----------------------------------------- -->
+    <div
+      *ngIf="
+        !(feed.service.inProgress | async) &&
+        (feed.service.feed | async).length < 1 &&
+        !isOwnedChannel
+      "
+      class="m-channelFeed__emptyFeedContainer"
+    >
+      <span
+        class="m-channelFeed__emptyFeedTitle"
+        i18n="@@M__CHANNEL_FEED__NO_CONTENT"
+        >No content</span
+      >
+      <ng-container [ngSwitch]="feed.type$ | async">
+        <span
+          *ngSwitchCase="'images'"
+          class="m-channelFeed__emptyFeedSubtitle"
+          i18n="@@M__CHANNEL_FEED__CHANNEL_NOT_POSTED_IMAGES"
+          >This channel hasn't posted an image yet</span
+        >
+        <span
+          *ngSwitchCase="'videos'"
+          class="m-channelFeed__emptyFeedSubtitle"
+          i18n="@@M__CHANNEL_FEED__CHANNEL_NOT_POSTED_VIDEOS"
+          >This channel hasn't posted a video yet</span
+        >
+        <span
+          *ngSwitchCase="'blogs'"
+          class="m-channelFeed__emptyFeedSubtitle"
+          i18n="@@M__CHANNEL_FEED__CHANNEL_NOT_POSTED_BLOGS"
+          >This channel hasn't posted a blog yet</span
+        >
+        <span
+          *ngSwitchCase="'activities'"
+          class="m-channelFeed__emptyFeedSubtitle"
+          i18n="@@M__CHANNEL_FEED__CHANNEL_NOT_POSTED_ANYTHING"
+          >This channel hasn't posted anything yet</span
+        >
+        <!-- Catch issues with any future additions -->
+        <span
+          *ngSwitchCaseDefault
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED__YET_GENERIC*"
+          >Looks like you haven't posted any content of this type yet</span
+        >
+      </ng-container>
+    </div>
+
+    <div
+      *ngIf="
+        !(feed.service.inProgress | async) &&
+        (feed.service.feed | async).length < 1 &&
+        isOwnedChannel
+      "
+      class="m-channelFeed__emptyFeedContainer m-channelFeed__emptyFeedContainer--bordered"
+    >
+      <ng-container [ngSwitch]="feed.type$ | async">
+        <span
+          *ngSwitchCase="'images'"
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED_IMAGES_YET"
+          >Looks like you haven't posted images yet</span
+        >
+        <span
+          *ngSwitchCase="'videos'"
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED_VIDEOS_YET"
+          >Looks like you haven't posted videos yet</span
+        >
+        <span
+          *ngSwitchCase="'blogs'"
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED_BLOGS_YET"
+          >Looks like you haven't posted blogs yet</span
+        >
+        <span
+          *ngSwitchCase="'activities'"
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED_YET"
+          >Looks like you haven't posted yet</span
+        >
+        <!-- Catch issues with any future additions -->
+        <span
+          *ngSwitchCaseDefault
+          class="m-channelFeed__emptyFeedTitle"
+          i18n="@@M__CHANNEL_FEED__YOU_HAVENT_POSTED__YET_GENERIC*"
+          >Looks like you haven't posted any content of this type yet.</span
+        >
+      </ng-container>
+
+      <button
+        class="m-channelFeed__firstPostButton"
+        i18n="@@M__CHANNEL_FEED__CREATE_YOUR_FIRST_POST"
+        (click)="onFirstPostButtonClick()"
+        [ngClass]="{
+          'm-channelFeed__firstPostButton--dark': isDarkTheme$ | async,
+          'm-channelFeed__firstPostButton--light': !(isDarkTheme$ | async)
+        }"
+      >
+        Create your first post
+      </button>
     </div>
   </div>
 
