(fix): onchain transfer gas fix and modal ux fix

--- a/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.html
+++ b/src/app/modules/wallet/v2/tokens/balance/balance-tokens.component.html
@@ -81,7 +81,7 @@
         >Transfer to On-Chain</a
       > -->
       <a
-        (click)="showTransferModal = true"
+        (click)="openTransferModal()"
         i18n="@@WALLET_V2_TOKENS_BALANCE__TRANSFER_TO_ONCHAIN"
         >Transfer to On-Chain</a
       >
