Various bits of maintainence for E2E

--- a/src/app/modules/blogs/view/view.html
+++ b/src/app/modules/blogs/view/view.html
@@ -86,6 +86,7 @@
         [mediaModal]="false"
         [options]="menuOptions"
         (optionSelected)="menuOptionSelected($event)"
+        data-cy="data-minds-post-menu-button"
       >
       </m-postMenu--v2>
 
