Deleted boost reject notification breaking feed. #4154

--- a/src/app/modules/notifications/notification.component.html
+++ b/src/app/modules/notifications/notification.component.html
@@ -969,7 +969,7 @@
   <ng-template ngSwitchCase="boost_rejected">
     <a
       [routerLink]="
-        notification.entityObj.type == 'activity'
+        notification.entityObj?.type == 'activity'
           ? ['/newsfeed', notification.entityObj.guid]
           : ['/boost/console/content']
       "
