Various fixes and changes for onboarding v3 including progress seperation

--- a/src/app/modules/onboarding-v3/modal/onboarding-modal.component.html
+++ b/src/app/modules/onboarding-v3/modal/onboarding-modal.component.html
@@ -67,7 +67,7 @@
       class="m-onboardingModal__nextButton"
       [disabled]="disabled$ | async"
       (click)="nextClicked()"
-      [saving]="inProgress"
+      [saving]="inProgress$ | async"
     >
       <ng-container
         *ngIf="(currentStep$ | async) === 'SetupChannelStep'"
