--- a/src/app/modules/onboarding-v3/panel/channel/channel.component.html
+++ b/src/app/modules/onboarding-v3/panel/channel/channel.component.html
@@ -1,3 +1,5 @@
+<m-loadingSpinner [inProgress]="preloading$ | async"></m-loadingSpinner>
+
 <form
   *ngIf="!(preloading$ | async)"
   [formGroup]="form"
