--- a/src/app/modules/forms/register/register.html
+++ b/src/app/modules/forms/register/register.html
@@ -194,7 +194,7 @@
   <div class="m-layout__row m-register__actions">
     <div class="m-register__checkboxes">
       <m-formInput__checkbox formControlName="exclusive_promotions">
-        Receive exclusive promotions from Minds
+        Receive exclusive token rewards and info
       </m-formInput__checkbox>
 
       <m-formInput__checkbox
