Updating cypress and flake reduction

--- a/src/app/modules/channels/v2/about/brief.component.html
+++ b/src/app/modules/channels/v2/about/brief.component.html
@@ -4,6 +4,7 @@
       <div
         class="m-channelAboutBriefBio__content"
         [innerHtml]="channel.briefdescription | tags"
+        data-cy="data-minds-channel-bio"
       ></div>
 
       <m-read-more--button
