--- a/src/app/modules/channels/v2/channel.component.html
+++ b/src/app/modules/channels/v2/channel.component.html
@@ -48,6 +48,7 @@
                 )
               "
               i18n="@@COMMON__ABOUT"
+              data-cy="data-minds-channel-about-button"
               >About</a
             >
           </div>
