--- a/src/app/modules/hashtags/typeahead-input/typeahead-input.component.html
+++ b/src/app/modules/hashtags/typeahead-input/typeahead-input.component.html
@@ -9,6 +9,7 @@
     [placeholder]="placeholder"
     (keydown.enter)="triggerAction(true)"
     (focus)="showDropdown()"
+    data-cy="data-minds-hashtags-typeahead-input"
   />
 
   <ul
