--- a/src/app/modules/channels/v2/actions/edit.component.html
+++ b/src/app/modules/channels/v2/actions/edit.component.html
@@ -1,6 +1,7 @@
 <a
   class="m-button-v2 m-button-v2--transparent"
   (click)="channelEditIntent.edit()"
+  data-cy="data-minds-channel-edit-button"
   i18n
 >
   Edit Channel
