--- a/src/app/modules/channels/v2/edit/hashtags.component.html
+++ b/src/app/modules/channels/v2/edit/hashtags.component.html
@@ -14,6 +14,7 @@
       [disabled]="(service.hashtags$ | async)?.length >= 5"
       (click)="hashtagsTypeaheadInput.triggerAction()"
       i18n="@@COMMON__ADD"
+      data-cy="data-minds-hashtag-add-button"
     >
       Add
     </button>
@@ -31,6 +32,7 @@
       iconId="close"
       [sizeFactor]="-20"
       (click)="service.removeHashtag(tag)"
+      data-cy="data-minds-hashtag-remove-button"
     ></m-icon>
   </li>
 </ul>
