--- a/src/app/modules/channels/v2/edit/info.component.html
+++ b/src/app/modules/channels/v2/edit/info.component.html
@@ -10,6 +10,7 @@
       name="displayName"
       [ngModel]="service.displayName$ | async"
       (ngModelChange)="service.displayName$.next($event)"
+      data-cy="data-minds-channel-display-name"
     />
   </div>
 </div>
@@ -23,6 +24,7 @@
     <m-channel__locationTypeahead
       [location]="service.location$ | async"
       (locationChange)="onLocation($event)"
+      data-cy="data-minds-channel-location"
     ></m-channel__locationTypeahead>
   </div>
 </div>
@@ -50,6 +52,7 @@
           name="publicDob"
           [ngModel]="service.publicDob$ | async"
           (ngModelChange)="service.publicDob$.next($event)"
+          data-cy="data-minds-channel-public-dob-checkbox"
         />
 
         <span class="m-form__customInput__checkbox"></span>
