Adding some spec tests

--- a/src/app/modules/homepage-v2/homepage-v2.component.html
+++ b/src/app/modules/homepage-v2/homepage-v2.component.html
@@ -49,6 +49,7 @@
             class="m-homepage__joinButton--blueOutline"
             (click)="register()"
             i18n="@@HOMEPAGE_V2__JOIN_MINDS_NOW"
+            data-cy="data-minds-homepage-join-button-main"
           >
             Join Minds Now
           </button>
