--- a/src/app/modules/onboarding-v3/panel/channel/channel.component.html
+++ b/src/app/modules/onboarding-v3/panel/channel/channel.component.html
@@ -14,6 +14,7 @@
     class="m-onboardingChannel__input"
     formControlName="name"
     placeholder="e.g. John Smith"
+    data-cy="data-minds-onboarding-channel-name"
   />
 
   <label
@@ -24,6 +25,7 @@
   <textarea
     class="m-onboardingChannel__textarea"
     formControlName="bio"
+    data-cy="data-minds-onboarding-channel-bio"
   ></textarea>
 
   <label class="m-onboardingChannel__label" i18n="@@ONBOARDING_CHANNEL__AVATAR"
@@ -44,6 +46,7 @@
         accept="image/*"
         (change)="uploadAvatar(avatarFile)"
         #avatarFile
+        data-cy="data-minds-onboarding-channel-avatar"
       />
     </label>
   </div>
