--- a/src/app/modules/onboarding-v3/widget/onboarding-widget.component.html
+++ b/src/app/modules/onboarding-v3/widget/onboarding-widget.component.html
@@ -1,100 +1,106 @@
-<div
-  class="m-onboardingWidget__container"
-  *mIfFeature="'onboarding-october-2020'"
-  data-cy="data-minds-onboarding-widget"
->
-  <!-- Header -->
-  <div class="m-onboardingWidget__header">
-    <span
-      class="m-onboardingWidget__title"
-      i18n="@@ONBOARDING_WIDGET__COMPLETE_TO_EARN"
-      >Complete to earn tokens</span
-    >
-    <m-dropdownMenu
-      *ngIf="dropdown"
-      [menu]="dropdown"
-      [anchorPosition]="{ top: '100%', right: '0' }"
-      triggerClass="m-button__dropdownArrow"
-      menuClass="m-button__dropdownMenu"
-      #dropdownMenuComponent
-      data-cy="data-minds-onboarding-widget-dropdown"
-    >
-      <i class="material-icons m-onboardingWidget__ellipsisMenu">more_vert</i>
-    </m-dropdownMenu>
-  </div>
-  <!-- Body -->
+<ng-container *ngIf="!completed">
   <div
-    class="m-onboardingWidget__body"
-    *ngIf="!hidden"
-    data-cy="data-minds-onboarding-widget-body"
+    class="m-onboardingWidget__container"
+    *mIfFeature="'onboarding-october-2020'"
+    data-cy="data-minds-onboarding-widget"
   >
-    <!-- Progress bar -->
-    <div class="m-onboardingWidget__progressBarContainer">
-      <div
-        class="m-onboardingWidget__progressBar"
-        [ngStyle]="{ width: (progress$ | async)?.completed_pct * 100 + '%' }"
-        data-cy="data-minds-onboarding-widget-progress-bar"
-      ></div>
-    </div>
-    <!-- Tasks -->
-    <div class="m-onboardingWidget__stepsContainer">
-      <div
-        class="m-onboardingWidget__step"
-        *ngFor="let step of (progress$ | async)?.steps"
-        [ngClass]="{ completed: step.is_completed }"
-        (click)="onTaskClick(step.id)"
+    <!-- Header -->
+    <div class="m-onboardingWidget__header">
+      <span
+        class="m-onboardingWidget__title"
+        i18n="@@ONBOARDING_WIDGET__COMPLETE_TO_EARN"
+        >Complete to earn tokens</span
       >
-        <span
-          *ngIf="step.id === 'VerifyEmailStep'"
-          i18n="@@ONBOARDING_WIDGET__VERIFY_EMAIL_ADDRESS"
-          data-cy="data-minds-onboarding-widget-verify-email"
+      <m-dropdownMenu
+        *ngIf="dropdown"
+        [menu]="dropdown"
+        [anchorPosition]="{ top: '100%', right: '0' }"
+        triggerClass="m-button__dropdownArrow"
+        menuClass="m-button__dropdownMenu"
+        #dropdownMenuComponent
+        data-cy="data-minds-onboarding-widget-dropdown"
+      >
+        <i class="material-icons m-onboardingWidget__ellipsisMenu">more_vert</i>
+      </m-dropdownMenu>
+    </div>
+    <!-- Body -->
+    <div
+      class="m-onboardingWidget__body"
+      *ngIf="!hidden"
+      data-cy="data-minds-onboarding-widget-body"
+    >
+      <!-- Progress bar -->
+      <div class="m-onboardingWidget__progressBarContainer">
+        <div
+          class="m-onboardingWidget__progressBar"
+          [ngStyle]="{ width: (progress$ | async)?.completed_pct * 100 + '%' }"
+          data-cy="data-minds-onboarding-widget-progress-bar"
+        ></div>
+      </div>
+      <!-- Tasks -->
+      <div class="m-onboardingWidget__stepsContainer">
+        <div
+          class="m-onboardingWidget__step"
+          *ngFor="let step of (progress$ | async)?.steps"
+          [ngClass]="{ completed: step.is_completed }"
+          (click)="onTaskClick(step.id)"
         >
-          Verify email address
-        </span>
-        <span
-          *ngIf="step.id === 'SuggestedHashtagsStep'"
-          i18n="@@ONBOARDING_WIDGET__SELECT_TAGS"
-          data-cy="data-minds-onboarding-widget-select-tags"
-        >
-          Select tags
-        </span>
-        <span
-          *ngIf="step.id === 'SetupChannelStep'"
-          i18n="@@ONBOARDING_WIDGET__SETUP_CHANNEL"
-          data-cy="data-minds-onboarding-widget-setup-channel"
-        >
-          Setup channel
-        </span>
-        <span
-          *ngIf="step.id === 'VerifyUniquenessStep'"
-          i18n="@@ONBOARDING_WIDGET__VERIFY_UNIQUENESS"
-          data-cy="data-minds-onboarding-widget-verify-uniqueness"
-        >
-          Verify uniqueness
-        </span>
-        <span
-          *ngIf="step.id === 'CreatePostStep'"
-          i18n="@@ONBOARDING_WIDGET__CREATE_A_POST"
-          data-cy="data-minds-onboarding-widget-create-post"
-        >
-          Create a post
-        </span>
+          <span
+            *ngIf="step.id === 'VerifyEmailStep'"
+            i18n="@@ONBOARDING_WIDGET__VERIFY_EMAIL_ADDRESS"
+            data-cy="data-minds-onboarding-widget-verify-email"
+          >
+            Verify email address
+          </span>
+          <span
+            *ngIf="step.id === 'SuggestedHashtagsStep'"
+            i18n="@@ONBOARDING_WIDGET__SELECT_TAGS"
+            data-cy="data-minds-onboarding-widget-select-tags"
+          >
+            Select tags
+          </span>
+          <span
+            *ngIf="step.id === 'SetupChannelStep'"
+            i18n="@@ONBOARDING_WIDGET__SETUP_CHANNEL"
+            data-cy="data-minds-onboarding-widget-setup-channel"
+          >
+            Setup channel
+          </span>
+          <span
+            *ngIf="step.id === 'VerifyUniquenessStep'"
+            i18n="@@ONBOARDING_WIDGET__VERIFY_UNIQUENESS"
+            data-cy="data-minds-onboarding-widget-verify-uniqueness"
+          >
+            Verify uniqueness
+          </span>
+          <span
+            *ngIf="step.id === 'CreatePostStep'"
+            i18n="@@ONBOARDING_WIDGET__CREATE_A_POST"
+            data-cy="data-minds-onboarding-widget-create-post"
+          >
+            Create a post
+          </span>
+        </div>
       </div>
     </div>
   </div>
-</div>
-<!-- Dropdown template -->
-<ng-template #dropdown>
-  <ul>
-    <li (click)="onHideClick('hide')" *ngIf="!hidden">
-      <span class="m-dropdownMenu__item">
-        <span i18n="@@ONBOARDING_WIDGET__HIDE_THIS_PANEL">Hide this panel</span>
-      </span>
-    </li>
-    <li (click)="onHideClick('show')" *ngIf="hidden">
-      <span class="m-dropdownMenu__item">
-        <span i18n="@@ONBOARDING_WIDGET__SHOW_THIS_PANEL">Show this panel</span>
-      </span>
-    </li>
-  </ul>
-</ng-template>
+  <!-- Dropdown template -->
+  <ng-template #dropdown>
+    <ul>
+      <li (click)="onHideClick('hide')" *ngIf="!hidden">
+        <span class="m-dropdownMenu__item">
+          <span i18n="@@ONBOARDING_WIDGET__HIDE_THIS_PANEL"
+            >Hide this panel</span
+          >
+        </span>
+      </li>
+      <li (click)="onHideClick('show')" *ngIf="hidden">
+        <span class="m-dropdownMenu__item">
+          <span i18n="@@ONBOARDING_WIDGET__SHOW_THIS_PANEL"
+            >Show this panel</span
+          >
+        </span>
+      </li>
+    </ul>
+  </ng-template>
+</ng-container>
