--- a/src/app/modules/onboarding-v3/panel/tags/tags.component.html
+++ b/src/app/modules/onboarding-v3/panel/tags/tags.component.html
@@ -3,7 +3,7 @@
   i18n="@@ONBOARDING_TAGS__SELECT_ATLEAST_THREE_INFORMATION"
 >
   Select at least three tags that are of interest to you. This will allow you to
-  discovery relevant content.
+  discover relevant content.
 </span>
 
 <div class="m-onboardingTags__tagContainer">
