--- a/src/app/modules/onboarding-v3/panel/tags/tags.component.html
+++ b/src/app/modules/onboarding-v3/panel/tags/tags.component.html
@@ -2,8 +2,8 @@
   class="m-onboardingTags__header"
   i18n="@@ONBOARDING_TAGS__SELECT_ATLEAST_THREE_INFORMATION"
 >
-  Select at least three tags that are of interest to you. This will allow you to
-  discover relevant content.
+  You must select at least three tags that are of interest to you. This will
+  allow you to discover relevant content.
 </span>
 
 <div class="m-onboardingTags__tagContainer">
