--- a/src/app/common/components/overlay-modal/overlay-modal.component.scss
+++ b/src/app/common/components/overlay-modal/overlay-modal.component.scss
@@ -8,8 +8,8 @@ m-overlay-modal {
   right: 0;
   height: 100%;
   width: 100%;
-  overflow: overlay;
   overflow: scroll;
+  overflow: overlay !important;
   @include z-index(modal);
 
   .m-overlay-modal--backdrop {
