--- a/src/app/modules/newsfeed/activity/content/content.component.html
+++ b/src/app/modules/newsfeed/activity/content/content.component.html
@@ -25,11 +25,13 @@
       m-read-more
       class="m-activityContent__message"
       [class.m-activityContent__message--remind]="entity.remind_object"
+      [class.m-activityContent__message--richEmbed]="isRichEmbed"
       [class.m-activityContent__message--isTextOnly]="isTextOnly"
-      [class.m-activityContent__message--short]="message.length <= 300"
+      [class.m-activityContent__message--short]="shortStatus"
       [class.m-activityContent__message--minimalMode]="minimalMode"
       [maxHeightAllowed]="maxMessageHeight"
-      *ngIf="message"
+      *ngIf="message.length >= 1"
+      (click)="onMessageClick($event)"
     >
       <div class="m-activityContent__messageWrapper">
         <span [innerHtml]="message | tags | codeHighlight"></span>
@@ -51,9 +53,9 @@
   </ng-container>
 </ng-template>
 <!-- Message usually goes above rich-embed preview -->
-<ng-container *ngIf="!minimalMode"
-  ><ng-container *ngTemplateOutlet="messageTemplate"></ng-container
-></ng-container>
+<ng-template #messageAbovePreview>
+  <ng-container *ngTemplateOutlet="messageTemplate"></ng-container
+></ng-template>
 <!-- ----------------------------------- -->
 <!-- RICH EMBED / BLOG -->
 <!-- ----------------------------------- -->
@@ -77,9 +79,11 @@
     ></div>
   </div>
   <!-- ----------------------------------- -->
-  <!-- Message goes below rich-embed preview in minimal mode-->
-  <ng-container *ngIf="minimalMode"
-    ><ng-container *ngTemplateOutlet="messageTemplate"></ng-container
+  <!-- Message goes below rich-embed preview in minimal mode and modal-->
+  <ng-container
+    *ngIf="minimalMode || (isRichEmbed && isModal); else messageAbovePreview"
+  >
+    <ng-container *ngTemplateOutlet="messageTemplate"></ng-container
   ></ng-container>
   <!-- ----------------------------------- -->
   <!-- VIDEO -->
@@ -108,7 +112,7 @@
   <!-- ----------------------------------- -->
   <!-- IMAGE -->
   <!-- ----------------------------------- -->
-  <div class="m-activityContent__media--image" *ngIf="isImage">
+  <div class="m-activityContent__media--image" #imageEl *ngIf="isImage">
     <ng-container *ngIf="!isModal; else image">
       <a
         class="m-activityContentMedia__link"
@@ -136,6 +140,7 @@
     m-read-more
     *ngIf="mediaDescription || mediaTitle"
     [maxHeightAllowed]="maxDescHeight"
+    (click)="onMessageClick($event)"
   >
     <div
       class="m-activityContent__descriptionWrapper"
@@ -149,6 +154,7 @@
       ></p>
       <p
         *ngIf="mediaDescription && !hideMediaDescription"
+        class="m-activityContent__mediaDescriptionText"
         [innerHtml]="mediaDescription | tags"
       ></p>
       <m-read-more--button
@@ -176,13 +182,14 @@
     not have permission to view it.</span
   >
 </div>
+
 <ng-container *ngIf="!hideMedia">
   <div
+    *ngIf="service.isRemind$ | async"
     class="m-activityContent__remind"
     [class.m-activityContent__remind--hasMessage]="!!message"
     [class.m-activityContent__remind--minimalMode]="minimalMode"
     #remindContainerEl
-    *ngIf="service.isRemind$ | async"
   >
     <m-activity__remind
       [parentService]="service"
@@ -195,20 +202,28 @@
   </div>
 </ng-container>
 <!-- ----------------------------------- -->
+<!--QUOTE MESSAGE -->
+<!-- ----------------------------------- -->
+<ng-container *ngIf="!hideText && isQuote && isModal">
+  <ng-container *ngTemplateOutlet="messageTemplate"></ng-container>
+</ng-container>
+<!-- ----------------------------------- -->
 <!-- TEMPLATE: TRANSLATION -->
 <!-- ----------------------------------- -->
 <ng-template #translation>
   <!-- (onTranslateInit)="propagateTranslation($event)" -->
-  <m-translate
-    *mIfBrowser
-    [open]="service.displayOptions.showTranslation"
-    [entity]="entity"
-    [translateEvent]="translateEvent"
-    (onTranslate)="(service.displayOptions.showTranslation === false)"
-    (onTranslateError)="(service.displayOptions.showTranslation === false)"
-    [class.m-translate--minimalMode]="minimalMode"
-    #translate
-  ></m-translate>
+  <ng-container *mIfBrowser>
+    <m-translate
+      *ngIf="service.displayOptions.showTranslation"
+      [open]="service.displayOptions.showTranslation"
+      [entity]="entity"
+      [translateEvent]="translateEvent"
+      (onTranslate)="onTranslate($event)"
+      (onTranslateError)="onTranslate($event)"
+      [class.m-translate--minimalMode]="minimalMode"
+      #translate
+    ></m-translate>
+  </ng-container>
 </ng-template>
 
 <!-- ----------------------------------- -->
