--- a/src/app/modules/newsfeed/activity/content/content.component.ng.scss
+++ b/src/app/modules/newsfeed/activity/content/content.component.ng.scss
@@ -28,4 +28,9 @@
       margin-right: 10px;
     }
   }
+
+  .m-activityContent__mediaDescription,
+  .m-activityContent__message {
+    cursor: pointer;
+  }
 }
