--- a/src/app/common/components/rich-embed/rich-embed.html
+++ b/src/app/common/components/rich-embed/rich-embed.html
@@ -21,11 +21,13 @@
     <!-- ----------------------------------- -->
     <!-- LOADING ANIMATION -->
     <!-- ----------------------------------- -->
-    <div
-      class="mdl-progress mdl-js-progress mdl-progress__indeterminate m-html-loading"
-      *ngIf="embeddedInline && (!inlineEmbed || !inlineEmbed.html)"
-      [mdl]
-    ></div>
+    <ng-container *ngIf="!_isModal">
+      <div
+        class="mdl-progress mdl-js-progress mdl-progress__indeterminate m-html-loading"
+        *ngIf="embeddedInline && (!inlineEmbed || !inlineEmbed.html)"
+        [mdl]
+      ></div>
+    </ng-container>
     <!-- ---- -->
     <img
       *ngIf="!cropImage && (src.thumbnail_src || !inlineEmbed)"
