--- a/src/app/modules/newsfeed/activity/modal/title-overlay/title-overlay.component.html
+++ b/src/app/modules/newsfeed/activity/modal/title-overlay/title-overlay.component.html
@@ -9,10 +9,12 @@
 >
   <div
     class="m-activityModal__overlayTitleWrapper"
-    *ngIf="entity.activity_type !== 'rich-embed'"
+    *ngIf="
+      entity.activity_type !== 'rich-embed' && entity.activity_type !== 'quote'
+    "
   >
     <!-- TITLE -->
-    <span
+    <!-- <span
       class="m-activityModal__overlayTitle m-activityModal__overlayTitle--notFullscreen"
       *ngIf="!(service.isFullscreen$ | async)"
     >
@@ -21,7 +23,7 @@
         (click)="$event.stopPropagation()"
         >{{ title }}</a
       >
-    </span>
+    </span> -->
     <!-- PAYWALL BADGE -->
     <m-paywallBadge [entity]="entity"></m-paywallBadge>
     <!-- FULLSCREEN -->
