--- a/src/app/modules/legacy/components/cards/cards.scss
+++ b/src/app/modules/legacy/components/cards/cards.scss
@@ -10,8 +10,8 @@ minds-card-user {
   }
   .avatar img {
     border-radius: 50%;
-    width: 100px;
-    height: 100px;
+    width: 80px;
+    height: 80px;
   }
 }
 
@@ -47,7 +47,7 @@ minds-card-user,
   }
 
   .minds-usercard-block {
-    margin-top: -72px;
+    margin-top: -60px;
     padding-bottom: 0;
     position: relative;
     display: flex;
@@ -64,7 +64,7 @@ minds-card-user,
 
     .body {
       flex: 1;
-      margin: $minds-margin * 2;
+      margin: 0 20px 20px;
       max-width: calc(100% - #{100px + ($minds-padding * 3)});
 
       h3 {
@@ -105,7 +105,7 @@ minds-card-user,
   minds-button-subscribe,
   minds-button-boost {
     position: absolute;
-    margin: -38px 0 0 130px;
+    margin: -26px 0 0 110px;
   }
 
   minds-button-feature {
