--- a/src/app/modules/suggestions/sidebar.component.ng.scss
+++ b/src/app/modules/suggestions/sidebar.component.ng.scss
@@ -104,16 +104,19 @@
         font-size: 13px;
         margin-right: 8px;
       }
-      ::ng-deep .m-button {
-        padding: 7px 7px;
-        i {
-          display: block;
-          font-size: 16px !important;
-          padding: 0;
-          margin: 0;
-        }
-        span {
-          display: none;
+      ::ng-deep m-button {
+        margin-right: 0;
+        .m-button {
+          padding: 7px 7px;
+          i {
+            display: block;
+            font-size: 16px !important;
+            padding: 0;
+            margin: 0;
+          }
+          span {
+            display: none;
+          }
         }
       }
     }
