(fix): use opacity out of 1 vs pct

--- a/src/app/common/components/app-prompt/app-prompt.component.ng.scss
+++ b/src/app/common/components/app-prompt/app-prompt.component.ng.scss
@@ -17,7 +17,7 @@
     font-size: 17px;
     font-weight: 500;
     cursor: pointer;
-    opacity: 85%;
+    opacity: 0.8;
 
     @include m-theme() {
       background-color: themed($m-black);
