--- a/src/app/common/layout/sidebar/navigation.component.html
+++ b/src/app/common/layout/sidebar/navigation.component.html
@@ -15,22 +15,6 @@
 
     <ul class="m-sidebarNavigation__list">
       <li
-        *ngIf="user"
-        class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
-        [routerLinkActive]="'m-sidebarNavigation__item--active'"
-      >
-        <a [routerLink]="['/' + user.username]" (click)="toggle()">
-          <img
-            [src]="cdnUrl + 'icon/' + user.guid + '/small/' + user.icontime"
-            alt=""
-          />
-          <span class="m-sidebarNavigationItem__text">
-            @{{ user.username }}
-          </span>
-        </a>
-      </li>
-
-      <li
         class="m-sidebarNavigation__item"
         [routerLinkActive]="'m-sidebarNavigation__item--active'"
       >
@@ -185,6 +169,69 @@
             >
           </li>
         </ul>
+      </li>
+
+      <li
+        class="m-sidebarNavigation__item"
+        [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        routerLinkActiveOptions="{ exact: true }"
+        *mIfFeature="'earn-modal'"
+      >
+        <a (click)="openEarnModal()">
+          <m-tooltip
+            [enabled]="!showLabels"
+            [anchor]="'left'"
+            [useParentPosition]="true"
+          >
+            <i class="material-icons" m-tooltip--anchor>attach_money</i>
+            <ng-container i18n="@@COMMON__EARN">Earn</ng-container>
+          </m-tooltip>
+
+          <span class="m-sidebarNavigationItem__text" i18n="@@COMMON__EARN">
+            Earn
+          </span>
+        </a>
+      </li>
+
+      <li
+        class="m-sidebarNavigation__item"
+        [routerLinkActive]="'m-sidebarNavigation__item--active'"
+        routerLinkActiveOptions="{ exact: true }"
+        *mIfFeature="'buy-tokens-uniswap-transak'"
+      >
+        <a (click)="buyTokens()">
+          <m-tooltip
+            [enabled]="!showLabels"
+            [anchor]="'left'"
+            [useParentPosition]="true"
+          >
+            <i class="material-icons" m-tooltip--anchor>shopping_cart</i>
+            <ng-container i18n="@@COMMON__BUY_TOKENS">Buy tokens</ng-container>
+          </m-tooltip>
+
+          <span
+            class="m-sidebarNavigationItem__text"
+            i18n="@@COMMON__BUY_TOKENS"
+          >
+            Buy tokens
+          </span>
+        </a>
+      </li>
+
+      <li
+        *ngIf="user"
+        class="m-sidebarNavigation__item m-sidebarNavigation__item--user"
+        [routerLinkActive]="'m-sidebarNavigation__item--active'"
+      >
+        <a [routerLink]="['/' + user.username]" (click)="toggle()">
+          <img
+            [src]="cdnUrl + 'icon/' + user.guid + '/small/' + user.icontime"
+            alt=""
+          />
+          <span class="m-sidebarNavigationItem__text">
+            @{{ user.username }}
+          </span>
+        </a>
       </li>
 
       <li
