(fix): composer in progress button misaligned

--- a/src/app/common/components/button/button.component.ng.scss
+++ b/src/app/common/components/button/button.component.ng.scss
@@ -236,7 +236,7 @@
       align-items: center;
       padding: 0;
 
-      > * {
+      > *:not(.m-button__text--saving) {
         height: 100%;
       }
 
